--- a/jspider.html
+++ b/jspider.html
@@ -4,8 +4,7 @@
 <head>
     <title>Java Training Institute | JSpiders</title>
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="utility.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="/font/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
 </head>
 
@@ -13,7 +12,7 @@
     <nav>
         <div class="container">
             <div class="items">
-                <img class="navlogo" src="logo_jspiders.3b552d0.png" alt="">
+                <img class="navlogo" src="./images/logo_jspiders.3b552d0.png" alt="">
             </div>
             <div class="items">
                 <a href=""><i class="fa-solid fa-house-chimney"></i> Home</a>
@@ -150,10 +149,10 @@
             <div class="container1">
                 <div class="span" style="font-size: 20px;">Java Full Stack</div>
                 <div class="items2">
-                    <img class="png" src="java1.png" alt="">
-                    <img class="png" src="java.png" alt="">
-                    <img class="png" src="java3.png" alt="">
-                    <img class="png" src="java4.png" alt="">
+                    <img class="png" src="./images/java1.png" alt="">
+                    <img class="png" src="./images/java.png" alt="">
+                    <img class="png" src="./images/java3.png" alt="">
+                    <img class="png" src="./images/java4.png" alt="">
                 </div>
             </div>
             <div class="java">
@@ -176,10 +175,10 @@
             <div class="container1">
                 <div class="span" style="font-size: 20px;">J2EE</div>
                 <div class="items2">
-                    <img class="png" src="java1.png" alt="">
-                    <!-- <img class="png" src="java.png" alt="">
-                    <img class="png" src="java3.png" alt="">
-                    <img class="png" src="java4.png" alt=""> -->
+                    <img class="png" src="./images/java1.png" alt="">
+                    <img class="png" src="./images/java.png" alt="">
+                    <img class="png" src="./images/java3.png" alt="">
+                    <img class="png" src="./images/java4.png" alt="">
                 </div>
             </div>
             <div class="java" style="padding-bottom: 33px;">
@@ -202,10 +201,10 @@
             <div class="container1">
                 <div class="span" style="font-size: 20px;">MEAN Stack</div>
                 <div class="items2">
-                    <img class="png" src="mern1.png" alt="">
-                    <img class="png" src="mern2.png" alt="">
-                    <img class="png" src="mern3.png" alt="">
-                    <img class="png" src="mern4.png" alt="">
+                    <img class="png" src="./images/mern1.png" alt="">
+                    <img class="png" src="./images/mern2.png" alt="">
+                    <img class="png" src="./images/mern3.png" alt="">
+                    <img class="png" src="./images/mern4.png" alt="">
                 </div>
             </div>
             <div class="java" style="padding-bottom: 86px;">
@@ -225,10 +224,10 @@
             <div class="container1">
                 <div class="span" style=" font-size: 20px;">MERN Stack</div>
                 <div class="items2">
-                    <img class="png" src="react.png" alt="">
-                    <img class="png" src="mern2.png" alt="">
-                    <img class="png" src="mern3.png" alt="">
-                    <img class="png" src="mern4.png" alt="">
+                    <img class="png" src="./images/react.png" alt="">
+                    <img class="png" src="./images/mern2.png" alt="">
+                    <img class="png" src="./images/mern3.png" alt="">
+                    <img class="png" src="./images/mern4.png" alt="">
                 </div>
             </div>
             <div class="java"  style="height: 220px; background-color: rgb(247, 247, 242);;">
@@ -250,10 +249,10 @@
             <div class="container1">
                 <div class="span" style="font-size: 20px;">Android Development</div>
                 <div class="items2">
-                    <img class="png" src="andr1.png" alt="">
-                    <img class="png" src="andro2.png" alt="">
-                    <!-- <img class="png" src="java3.png" alt="">
-                    <img class="png" src="java4.png" alt=""> -->
+                    <img class="png" src="./images/andr1.png" alt="">
+                    <img class="png" src="./images/andro2.png" alt="">
+                    <img class="png" src="./images/java3.png" alt="">
+                    <img class="png" src="./images/java4.png" alt="">
                 </div>
             </div>
             <div class="java" style="height: 220px; background-color: rgb(247, 247, 242);;" >
@@ -275,14 +274,14 @@
         </div>
     </div>
     <div class="parent5">
-        <img src="Deliotte_C9ukSJM_1_yA82JEr.png" alt="">
-        <img src="Capegemini_60.png" alt="">
-        <img src="Integra_Micro_Systems_chIzJjj (1).jpg" alt="">
-        <img src="sharp_sZ49lwe.png" alt="">
-        <img src="EFI_pdQaA6e.png" alt="">
-        <img src="arisglobal-logo-new_0_ijEbzaU.png" alt="">
-        <img src="Birlasoft_YZhugEA.png" alt="">
-        <img src="3dplm_XXe7oH6.png" alt="">
+        <img src="./images/Deliotte_C9ukSJM_1_yA82JEr.png" alt="">
+        <img src="./images/Capegemini_60.png" alt="">
+        <img src="./images/Integra_Micro_Systems_chIzJjj (1).jpg" alt="">
+        <img src="./images/sharp_sZ49lwe.png" alt="">
+        <img src="./images/EFI_pdQaA6e.png" alt="">
+        <img src="./images/arisglobal-logo-new_0_ijEbzaU.png" alt="">
+        <img src="./images/Birlasoft_YZhugEA.png" alt="">
+        <img src="./images/3dplm_XXe7oH6.png" alt="">
     </div>
 </body>
 
