--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
 </body>
 
 <footer>
+   <div class="footer">
     <h3 style="color: orange;"><i class="fa-regular fa-copyright"></i> 2024JSpiders</h3>
     <h3 style="color: #5a7670"><i class="fa-solid fa-user-lock"></i> Privacy</h3>
     <h3 style="color: #18547c;"><i class="fa-solid fa-bug"></i> QSpiders</h3>
@@ -294,6 +295,7 @@
     <h3 style="color: orange;"><i class="fa-solid fa-square-phone"></i> +916366110033</h3>
     <h3 style="color: orange;"><i class="fa-solid fa-square-phone"></i> +443332423091</h3>
     <h3 style="color: orange;"><i class="fa-solid fa-envelope"></i> enquiry@jspiders.com</h3>
+   </div>
 </footer>
 
 </html>
